# Citizens

./: CMakeLists.txt  NOTES  README.md  index.html
client/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile.in  FindCryptoPP.cmake  Makefile  citizens  cmake_install.cmake  test.md2
client/Dummy_MapTiles/: Village.xml
client/buildings/: hut.ms3d  hut.tga  hut.xml
client/doc/html/: Configuration_8hpp_source.html  ElementIDs_8h_source.html  EventReceiver_8hpp_source.html  GraphicsEngine_8hpp_source.html  IScene_8hpp_source.html  LoginScene_8hpp_source.html  Network_8hpp_source.html  Protocol_8hpp_source.html  SFMLNetwork_8hpp_source.html  annotated.html  classCitizens_1_1Configuration-members.html  classCitizens_1_1Configuration.html  classCitizens_1_1EventReceiver-members.html  classCitizens_1_1EventReceiver.html  classCitizens_1_1GraphicsEngine-members.html  classCitizens_1_1GraphicsEngine.html  classCitizens_1_1IScene-members.html  classCitizens_1_1IScene.html  classCitizens_1_1LoginScene-members.html  classCitizens_1_1LoginScene.html  classCitizens_1_1Network-members.html  classCitizens_1_1Network.html  classCitizens_1_1Protocol-members.html  classCitizens_1_1Protocol.html  classCitizens_1_1SFMLNetwork-members.html  classCitizens_1_1SFMLNetwork.html  classes.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  pages.html  structCitizens_1_1Packet-members.html  structCitizens_1_1Packet.html  todo.html
client/fonts/: myfont.xml
client/include/: Angle.hpp  Building.hpp  CClientEngine.hpp  CClientEngineLinux.hpp  CLoginMenuPage.hpp  COverviewScene.hpp  CachedXML.hpp  Configuration.hpp  Coordinate.hpp  ElementIDs.h  EventReceiver.hpp  GraphicsEngine.hpp  ICityMap.hpp  IClientEngine.hpp  IMenuPage.hpp  IScene.hpp  LoginScene.hpp  MapScene.hpp  MapTile.hpp  Network.hpp  Protocol.hpp  SFMLNetwork.hpp  TestNetwork.hpp  Zone.hpp
client/maps/test1/: losttemple.txt  map-losttemple.pk3
client/sky/: dome.tga
client/src/: Building.cpp  CClientEngineLinux.cpp  CLoginMenuPage.cpp  COverviewScene.cpp  CachedXML.cpp  ClientMain.cpp  Configuration.cpp  EventReceiver.cpp  GraphicsEngine.cpp  LoginScene.cpp  Main.cpp  MapScene.cpp  MapTile.cpp  Protocol.cpp  SFMLNetwork.cpp  TestNetwork.cpp  Zone.cpp
client/xml/: asset.dtd  maptile.dtd
server/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Doxyfile.in  Makefile  broken.conf  citizend  cmake_install.cmake  db_structure.sql  keepalive.conf  purge.sql  test.conf  test.sh  test_suite.txt
server/Testing/Temporary/: CTestCostData.txt
server/doc/html/: Command_8cpp.html  Command_8hpp.html  Command_8hpp_source.html  Configuration_8cpp.html  Configuration_8hpp.html  Configuration_8hpp_source.html  Main_8cpp.html  Options_8cpp.html  Options_8hpp.html  Options_8hpp_source.html  Server_8cpp.html  Server_8hpp.html  Server_8hpp_source.html  Trim_8hpp.html  Trim_8hpp_source.html  annotated.html  classCitizens_1_1Command-members.html  classCitizens_1_1Command.html  classCitizens_1_1Configuration.html  (+21 more)
server/include/: COptions.hpp  CServerEngine.hpp  Command.hpp  Configuration.hpp  Database.hpp  IServerEngine.hpp  Logger.hpp  Network.hpp  Options.hpp  SFMLNetwork.hpp  Server.hpp  Trim.hpp
server/src/: COptions.cpp  CServerEngine.cpp  Command.cpp  Configuration.cpp  Database.cpp  Logger.cpp  Main.cpp  Options.cpp  SFMLNetwork.cpp  Server.cpp  ServerMain.cpp
(+110 files in other folders)
